--- a/src/assets/scss/views/_team.scss
+++ b/src/assets/scss/views/_team.scss
@@ -1,12 +1,13 @@
 .team {
-    background-color: $purple;
+    
     position: relative;
     padding: 30px 0;
     .row.top {
+        background-color: $purple;
+        min-height: 80%;
         display: block;
-        overflow-y: hidden;
         @media (max-width: 991px) {
-            padding: 30px 0px;
+            padding: 50px 0px;
         }
         .content {
             display: flex;
@@ -17,24 +18,23 @@
             .baffle_text span {
                 color: $white;
             }
-            
-            .team-container {
-                display: block;
-                padding: 0 0 30px;
-                .container {
-                    @media (min-width:992px) {
-                        max-width: 800px;
-                        margin: auto;
-                    }
-                    @media (max-width:768px) {
-                        max-width: 400px;
-                        margin: auto;
-                    }
+            .animated {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                @media (max-width:991px) {
+                    display: block;
+                    padding: 70px 0px;
                 }
+            }
+            .team-container {
+                padding: 0;
                 .team-member {
                     outline: none;
-                    h2 {
-                        color: $white;
+                    padding: 10px 50px;
+                    h3 {
+                        color: $yellow;
                         font-family: $baseFontFamily;
                         text-align: center;
                         font-weight: bold;
@@ -42,13 +42,13 @@
                     }
                     .team-member-content {
                         margin: 10px 0 10px 0;
-                        h4 {
-                            color: $yellow;
+                        p {
+                            color: $white;
                             text-align: center;
                             margin-bottom: 15px;
                         }
                         img {
-                            max-width: 250px;
+                            max-width: 220px;
                             object-fit: cover;
                             margin: 0 auto;
                             text-align: center;
@@ -82,6 +82,33 @@
                         }
                     }
                 }
+            }
+        }
+    }
+
+    .row.bottom {
+        background: $white;
+        .client {
+            display: flex;
+            justify-content: center;
+            @media (max-width : 991px) {
+                margin: 50px 0;
+            }
+            img {
+                object-fit: contain;
+                margin-bottom: 0;
+                max-width: 100px;
+                max-height: 100px;
+                opacity: .5;
+                transition: .5s;
+                &:hover {
+                    opacity: 1;
+                }
+            }
+            div {
+                display: flex;
+                justify-content: center;
+                align-items: top;
             }
         }
     }
