--- a/src/assets/scss/views/_about.scss
+++ b/src/assets/scss/views/_about.scss
@@ -25,23 +25,57 @@
         }
         .skills {
             display: flex;
+            align-items: center;
             justify-content: center;
             flex-direction: column;
-            margin: 3%;
-            background-color: $blue;
+            padding: 5% 5% 5% 0;
+            
+        
             @media (max-width:991px) {
                 width: 100%;
             }
-            .skills-container {
-                max-width: 80%;
-                margin-left: 10%;
 
-                @media (max-width: 991px) {
-                    max-width: 100%;
-                    margin-top: 20px;
-                    
+            .container {
+                display: block;
+                align-items: center;
+                background: $purple;
+
+                .line-text {
+        
+                    padding: 10px 0;
+                    margin-top: 10px;
+
                 }
-            }
+
+                .counter_component {
+                     text-align: center;
+                     padding: 0 20px 20px 20px;
+                     @media (max-width:991px) {
+                          padding: 20px;
+                     }
+                     .icon {
+                          color: $white;
+                          font-size: 28px;
+                          height: 30px;
+                     }
+                     .value {
+                          span {
+                               color: $white;
+                               font-size: 30px;
+                         }
+                         .symbol {
+                               position: absolute;
+                               font-size: 17px;
+                               color: $pink;
+                         }
+                     }
+                     .text {
+                          color: #fff;
+                          font-size: 14px;
+                          line-height: 15px;
+                     }
+                }
+           }
         }
     }
 }
