Updates to code

--- a/src/assets/scss/views/_contact.scss
+++ b/src/assets/scss/views/_contact.scss
@@ -52,6 +52,7 @@
                     border-bottom: 1px solid #555;
                     transition: .2s;
                     color: $black;
+                    font-size: 1.6rem;
                     &:focus {
                         border-bottom: 1px solid $purple;
                         outline: none;
