--- a/src/assets/scss/views/_hero.scss
+++ b/src/assets/scss/views/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background-color: $white;
+    background-color: $blue;
     padding: 50px;
     display: flex;
     align-items: center;
