--- a/src/assets/scss/components/_navigation.scss
+++ b/src/assets/scss/components/_navigation.scss
@@ -55,14 +55,14 @@
             &::before {
                 top: -28px;
                 left: -2px;
-                border-left: 10px solid $pink;
-                border-top: 10px solid $pink;
+                border-left: 10px solid $white;
+                border-top: 10px solid $white;
             }
             &::after {
                 bottom: -28px;
                 right: -2px;
-                border-right: 10px solid $white;
-                border-bottom: 10px solid $white;
+                border-right: 10px solid $pink;
+                border-bottom: 10px solid $pink;
             }
         }
        
