--- a/src/assets/scss/views/_about.scss
+++ b/src/assets/scss/views/_about.scss
@@ -28,7 +28,7 @@
             align-items: center;
             justify-content: center;
             flex-direction: column;
-            padding: 5% 5% 5% 0;
+            padding: 0;
             
         
             @media (max-width:991px) {
@@ -39,6 +39,7 @@
                 display: block;
                 align-items: center;
                 background: $purple;
+                min-height: 600px;
 
                 .line-text {
         
@@ -49,29 +50,29 @@
 
                 .counter_component {
                      text-align: center;
-                     padding: 0 20px 20px 20px;
+                     padding: 20px;
                      @media (max-width:991px) {
                           padding: 20px;
                      }
                      .icon {
                           color: $white;
-                          font-size: 28px;
+                          font-size: 2.8rem;
                           height: 30px;
                      }
                      .value {
                           span {
                                color: $white;
-                               font-size: 30px;
+                               font-size: 3rem;
                          }
                          .symbol {
                                position: absolute;
-                               font-size: 17px;
+                               font-size: 1.7rem;
                                color: $pink;
                          }
                      }
                      .text {
-                          color: #fff;
-                          font-size: 14px;
+                          color: $white;
+                          font-size: 1.4rem;
                           line-height: 15px;
                      }
                 }
