--- a/src/assets/scss/views/_team.scss
+++ b/src/assets/scss/views/_team.scss
@@ -2,10 +2,8 @@
     
     position: relative;
     padding: 30px 0;
-    .row.top {
+    .row {
         background-color: $purple;
-        min-height: 80%;
-        display: block;
         @media (max-width: 991px) {
             padding: 50px 0px;
         }
@@ -13,7 +11,8 @@
             display: flex;
             justify-content: center;
             flex-direction: column;
-            padding: 2% 5%;
+            padding: 5% 5% 3%;
+            width:100%;
             @include baffleText;
             .baffle_text span {
                 color: $white;
@@ -84,34 +83,36 @@
                 }
             }
         }
-    }
 
-    .row.bottom {
-        background: $white;
-        .client {
-            display: flex;
-            justify-content: center;
-            @media (max-width : 991px) {
-                margin: 50px 0;
-            }
-            img {
-                object-fit: contain;
-                margin-bottom: 0;
-                max-width: 100px;
-                max-height: 100px;
-                opacity: .5;
-                transition: .5s;
-                &:hover {
-                    opacity: 1;
-                }
-            }
-            div {
+        &.bottom {
+            background: $white;
+            overflow: hidden;
+            .client {
                 display: flex;
                 justify-content: center;
-                align-items: top;
+                @media (max-width : 991px) {
+                    margin: 50px 0;
+                }
+                img {
+                    object-fit: contain;
+                    margin-bottom: 0;
+                    max-width: 100px;
+                    max-height: 100px;
+                    opacity: .5;
+                    transition: .5s;
+                    &:hover {
+                        opacity: 1;
+                    }
+                }
+                div {
+                    display: flex;
+                    justify-content: center;
+                    align-items: top;
+                }
             }
         }
     }
+
 }
 /* Slick Slider */
 .slick-slider
