--- a/src/assets/scss/views/_header.scss
+++ b/src/assets/scss/views/_header.scss
@@ -4,15 +4,19 @@
     width: 100%;
     height: 50px;
     z-index: 99;
+
+    &:focus{
+      outline: 0;
+    }
    .content {
      display: flex;
      flex-direction: column;
      .logo {
-          max-width: 280px;
+          max-width: 250px;
           position: relative;
           align-self: flex-end;
           right: 3%;
-          top: 2px;
+          top: 6px;
           cursor: pointer;
 
           @media (min-width:768px) {
