--- a/src/assets/scss/views/_portfolio.scss
+++ b/src/assets/scss/views/_portfolio.scss
@@ -2,6 +2,9 @@
     background-color: $white;
     position: relative;
     padding-top: 5rem;
+    @media (max-width:768px) {
+        padding-top: 0;
+    }
 
     .row {
         display: flex;
@@ -39,6 +42,8 @@
     .gallery {
         &-list {
             margin: 2rem 2rem 2rem 0;
+            display: flex;
+            width: 100%;
         }
 
         &-item {
