--- a/src/assets/scss/views/_services.scss
+++ b/src/assets/scss/views/_services.scss
@@ -2,8 +2,14 @@
      background-color: $white;
      position: relative;
      padding: 30px 0;
+     display: flex;
+     @media (max-width: 768px) {
+          padding: 0;
+      }
      .row.top {
          display: flex;
+         overflow: hidden;
+         width: 100%;
          @media (max-width: 991px) {
               min-height: 100%;
               padding-top: 50px;
@@ -13,10 +19,17 @@
              justify-content: center;
              flex-direction: column;
              padding: 2% 5%;
+             width: 100%;
              @include baffleText;
+          
+             .heading {
+                  padding-bottom: 3rem;
+             }
+
              .services_container {
                display: flex;
                align-items: center;
+               min-height: 500px;
                
                @media (max-width: 991px) {
                     margin-top: 40px;
