--- a/src/assets/scss/views/_contact.scss
+++ b/src/assets/scss/views/_contact.scss
@@ -23,6 +23,7 @@
             @media (max-width:991px) {
                 height: 100px;
                 width: 100%;
+                max-width: 100%;
                 .baffle_text {
                     transform: inherit;
                     span {
