--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -2,8 +2,15 @@
 body {
   height: 100%;
   width: 100%;
-    margin: 0;
+  margin: 0;
 
+}
+
+html {
+  body {
+    padding-right: 0 !important;
+    overflow-x: hidden;
+  }
 }
 
 * {
@@ -29,8 +36,8 @@ h1,
     margin-bottom: 2.1rem;
     
     @media #{$tablet} {
-        font-size: 6rem;
-        line-height: 6.8rem;
+        font-size: 5rem;
+        line-height: 5.8rem;
     }
 }
 
@@ -66,17 +73,23 @@ h4,
 }
 
 p {
-    font-size: 1.6rem;
-    line-height: 2.4rem;
+    font-size: 1.4rem;
+    line-height: 2rem;
     margin-bottom: 1.5rem;
     font-family: $baseFontFamily;
     font-weight: 300;
     color: $black;
 
     @media #{$tablet} {
-        font-size: 1.8rem;
-        line-height: 2.8rem;
+        font-size: 1.6rem;
+        line-height: 2.4rem;
     }
+
+    @media (min-width: 1500px) {
+      font-size: 1.8rem;
+      line-height: 2.8rem;
+  }
+    
 }
 
 a:not([href^="/"]) {
@@ -181,7 +194,7 @@ img {
     top: 11px;
   }
   @media (max-width:500px) {
-    font-size: 14px;
+    font-size: 18px;
     &:after {
       top: 7px;
     }
