--- a/src/assets/scss/global/_mixins.scss
+++ b/src/assets/scss/global/_mixins.scss
@@ -6,17 +6,17 @@
         span {
             color: $white;
             font-family: $headingFontFamily;
-            font-size: 55px;
+            font-size: 5.5rem;
             margin: 10px 0 20px 0;
-            line-height: 60px;
+            line-height: 6rem;
             font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 10px;
         }
 
         @media (max-width:991px) {
-            font-size: 40px;
-            line-height: 40px;
+            font-size: 4rem;
+            line-height: 4rem;
         }
     }
 }
@@ -25,12 +25,12 @@
     .baffle_text span {
         color: $blue;
         font-family:  $headingFontFamily;
-        font-size: 60px;
-        line-height: 60px;
+        font-size: 5rem;
+        line-height: 5rem;
         font-weight: 800;
         @media (max-width:991px) {
-              font-size: 40px;
-              line-height: 40px;
+            font-size: 4rem;
+            line-height: 4rem;
           }
       }
 }
