--- a/src/assets/scss/views/_about.scss
+++ b/src/assets/scss/views/_about.scss
@@ -15,8 +15,8 @@
             justify-content: center;
             flex-direction: column;
             padding: 5%;
-            @media (max-width:768px) {
-                padding: 5% 10% 5% 15%;
+            @media (max-width:767px) {
+                padding: 5% 10%;
             }
 
         }
@@ -36,21 +36,29 @@
                 display: block;
                 align-items: center;
                 background: $purple;
-                min-height: 600px;
+                min-height: 590px;
+
+                @media (min-width:1500px) {
+                    min-height: 650px;
+                }
 
                 .line-text {
         
                     padding: 10px 0;
-                    margin-top: 10px;
+                    margin-top: 20px;
 
                 }
 
                 .counter_component {
                      text-align: center;
-                     padding: 20px;
+                     padding: 18px 20px 20px 20px;
                      @media (max-width:991px) {
                           padding: 20px;
                      }
+
+                     @media (min-width:1500px) {
+                        padding: 20px;
+                    }
                      .icon {
                           color: $white;
                           font-size: 2.8rem;
