--- a/src/assets/scss/views/_hero.scss
+++ b/src/assets/scss/views/_hero.scss
@@ -58,9 +58,14 @@
                     margin-top: 0;
                 }
                 .Typewriter span {
-                    font-size: 2.8rem;
+                    font-size: 3rem;
                 }
             }
+            @media (max-width: 320px) {
+                .Typewriter span {
+                    font-size: 2.7rem;
+                }
+            }   
     
             .hover-button {
                 margin-top: 20px;
@@ -76,10 +81,13 @@
            display: flex;
            justify-content: center;
            flex-direction: column;
-           @media (max-width: 768px) {
-            width: 100%;
-            min-height: 300px;
+           @media (max-width: 340px) {
+                width: 100%;
+                min-height: 300px;
            }
+           @media (max-width:768px) {
+                min-height: 380px;
+            }
            svg {
                color: $white;
                font-size: 5rem;
