--- a/src/assets/scss/views/_portfolio.scss
+++ b/src/assets/scss/views/_portfolio.scss
@@ -12,9 +12,8 @@
         overflow: hidden;
         min-height: 100%;
         padding: 0;
-        @media (max-width:991px) {
+        @media (max-width:767px) {
             display: block;
-            flex-wrap: wrap;
         }
         .side {
             display: flex;
@@ -27,6 +26,8 @@
             @media (max-width:991px) {
                 height: 100px;
                 width: 100%;
+                max-width: 100%;
+                flex: 100%;
                 .baffle_text {
                     transform: inherit;
                     color: $white;
@@ -39,18 +40,40 @@
         }
     }
 
+    .recent-works {
+        padding-top: 1rem;
+        @media (max-width:768px) {
+            flex: 100%;
+            max-width: 100%;
+        }
+    }
+
     .gallery {
         &-list {
-            margin: 2rem 2rem 2rem 0;
-            display: flex;
-            width: 100%;
+            margin: 1rem;
+            padding:  0;
+
+            @media #{$tablet} {
+                margin: 2rem 2rem 2rem -2rem;
+                padding:  2rem
+            }
+
+            @media (min-width:1500px) {
+                padding: 6rem 3rem;
+            }
         }
 
         &-item {
-            margin: 0 0 3rem 0;
+            margin: 0;
+            padding: 0 2rem 3rem 2rem;
+            
+            @media (min-width:1500px) {
+                padding: 0 3rem 5rem 3rem;
+            }
             cursor: pointer;
            
             .react_lightgallery_item {
+                box-shadow: 0px 5px 10px #cccccc;
                 position: relative;
                 display: flex;
                 align-items: center;
@@ -91,7 +114,8 @@
                     opacity: 0;
                     position: relative;
                     z-index: 10;
-                    align-self: center;
+                    padding: 0 1rem;
+                    text-align: center;
                }
 
                &-link {
@@ -112,10 +136,6 @@
             }
               
            }
-
-           img {
-                min-height: 160px;
-            }
         }
     }
 
