--- a/src/assets/scss/views/_team.scss
+++ b/src/assets/scss/views/_team.scss
@@ -31,7 +31,11 @@
                 }
             }
             .team-container {
-                padding: 3rem 0;
+                padding: 0 0 3rem 0;
+
+                @media (min-width:1500px) {
+                    padding: 7rem 0 3rem;
+                }
                 .team-member {
                     outline: none;
                     padding: 10px 50px;
@@ -41,6 +45,11 @@
                         text-align: center;
                         font-weight: bold;
                         padding-top: 10px;
+                    }
+                    &:last-child {
+                        .social_icons {
+                            visibility: hidden;
+                        }
                     }
                     .team-member-content {
                         margin: 10px 0 10px 0;
@@ -111,10 +120,10 @@
                     margin-bottom: 0;
                     max-width: 100px;
                     max-height: 100px;
-                    opacity: .5;
+                    opacity: 1;
                     transition: .5s;
                     &:hover {
-                        opacity: 1;
+                        opacity: 0.5;
                     }
                 }
                 div {
