--- a/src/assets/scss/views/_about.scss
+++ b/src/assets/scss/views/_about.scss
@@ -42,6 +42,10 @@
                     min-height: 650px;
                 }
 
+                @media (max-width:580px) {
+                    padding-bottom: 2rem;
+                }
+
                 .line-text {
         
                     padding: 10px 0;
