--- a/src/assets/scss/views/_portfolio.scss
+++ b/src/assets/scss/views/_portfolio.scss
@@ -41,14 +41,19 @@
     }
 
     .recent-works {
-        padding-top: 1rem;
+        
         @media (max-width:768px) {
+            padding: 3rem 0 2rem;
             flex: 100%;
             max-width: 100%;
         }
     }
 
     .gallery {
+        @media (max-width:768px) {
+            padding: 2rem 0;
+        }
+        
         &-list {
             margin: 1rem;
             padding:  0;
@@ -139,4 +144,13 @@
         }
     }
 
+}
+
+.lg-outer .lg-thumb-item.active, .lg-outer .lg-thumb-item:hover {
+    border-color: $purple;
+}
+
+.lg-outer .lg-thumb-item {
+    border: 2px solid $yellow;
+    border-radius: 0;
 }
