--- a/src/assets/scss/views/_services.scss
+++ b/src/assets/scss/views/_services.scss
@@ -32,7 +32,7 @@
                min-height: 400px;
                
                @media (max-width: 991px) {
-                    margin-top: 40px;
+                    margin: 20px 0;
                }
 
                @media (min-width: 1500px) {
